<resources>
    <string name="app_name">Launder Agent</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="dont_have_account">Do not have an account?\nClick here to sign up</string>
    <string name="name">name</string>
    <string name="signup">signup</string>
    <string name="already_have_account">Already have an account?\nClick here to login</string>
    <string name="welcome_back">Welcome </string>
    <string name="empty" />
    <string name="title_activity_maps">Map Current Location</string>
    <string name="logout">logout</string>
    <string name="add">add</string>
    <string name="phone">phone</string>
    <string name="post">Post</string>
    <string name="choose_image">Choose image</string>
    <string name="service">Service</string>
    <string name="error_no_image_chosen">no image chosen</string>
    <string name="error_unknown">unknown Error</string>
    <string name="google_map_key">AIzaSyDJTW2gR4O46ry50dB5FF1_f7JqGsPz0eI</string>
    <string name="cake">Service</string>
    <string name="save">Save</string>
    <string name="error_username_too_short">user name too short</string>
    <string name="error_input_empty">input empty</string>
    <string name="no_description">no description</string>
    <string name="error_fill">Please fill all forms</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="delete_post_dialog_title">Do you want to delete that post?</string>
    <string name="add_service">add Service</string>
    <string name="cart">Cart</string>

    <string-array name="locations">
        <item>Dagoretti</item>
        <item>Embakasi</item>
        <item>Langata</item>
        <item>Kamukunji</item>
        <item>Ngong</item>
        <item>Kasarani</item>
        <item>Rongai</item>
    </string-array>y>
</resources>