<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
       android:src="@drawable/dry"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSetPostImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toEndOf="@id/ivPostImage"
        app:layout_constraintStart_toStartOf="@id/ivPostImage"
        app:layout_constraintTop_toTopOf="@id/ivPostImage"
        app:layout_constraintBottom_toBottomOf="@id/ivPostImage"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCakeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCakeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cake"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="5" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPriceText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCakeText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPriceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="price"
            android:inputType="number"
            android:maxLength="20"
            android:maxLines="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="per"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tilPriceText"
        app:layout_constraintStart_toEndOf="@+id/tilPriceText"
        app:layout_constraintTop_toTopOf="@+id/tilPriceText" />

    <ProgressBar
        android:id="@+id/createPostProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCakeText" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPriceText" />

    <NumberPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>